[package]
name = "blockchain-lab"
version = "0.1.0"
authors = ["Dong Zhou <dong.zhou.08@gmail.com>"]

[dependencies]
mio = "0.6.8"
clap = "2"
term_size = "0.3"
textwrap = "0.9"
toml = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
parking_lot = "0.6"
parity-version = { path = "util/version" }
panic_hook = { path = "util/panic_hook" }
dir = { path = "util/dir" }
ethcore-io = { path = "util/io", features = ["mio"] }
ethcore-crypto = { path = "crypto" }
ethkey = { path = "ethkey" }
ctrlc = { git = "https://github.com/paritytech/rust-ctrlc.git" }
jsonrpc-core = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-1.11" }
jsonrpc-ipc-server = { git = "https://github.com/paritytech/jsonrpc", branch = "parity-1.11" }
jsonrpc-tcp-server = { git = "https://github.com/paritytech/jsonrpc", branch = "parity-1.11" }
parity-reactor = { path = "util/reactor" }
error-chain = { version = "0.12" }
log = "0.3"
ethereum-types = "0.3"
slab = "0.2"
core = { path = "core" }
