[package]
name = "conflux"
version = "0.1.0"
authors = ["Dong Zhou <dong.zhou.08@gmail.com>"]

[dependencies]
mio = "0.6.8"
clap = "2"
term_size = "0.3"
textwrap = "0.9"
toml = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
parking_lot = "0.6"
parity-version = { path = "util/version" }
panic_hook = { path = "util/panic_hook" }
dir = { path = "util/dir" }
io = { path = "util/io" }
ethcore-crypto = { path = "crypto" }
ethkey = { path = "ethkey" }
ctrlc = { git = "https://github.com/paritytech/rust-ctrlc.git" }
jsonrpc-core = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-1.11" }
jsonrpc-macros = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-1.11" }
jsonrpc-tcp-server = { git = "https://github.com/paritytech/jsonrpc", branch = "parity-1.11" }
jsonrpc-http-server = { git = "https://github.com/paritytech/jsonrpc", branch = "parity-1.11" }
parity-reactor = { path = "util/reactor" }
error-chain = { version = "0.12" }
log = "0.4"
ethereum-types = "0.4"
slab = "0.2"
core = { path = "core" }
network = { path = "network" }
blockgen = { path = "blockgen" }
txgen = { path = "transactiongen" }
secret-store = { path = "secret_store" }
primitives = { path = "primitives" }
log4rs = "0.8"
rpc = { path = "rpc" }
# account-store = { path = "account-store" }
