[package]
name = "conflux"
version = "0.1.0"
authors = ["Dong Zhou <dong.zhou.08@gmail.com>"]
edition = "2018"

[dependencies]
mio = "0.6.8"
clap = "2"
term_size = "0.3"
textwrap = "0.9"
toml = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
parking_lot = "0.6"
parity-version = { path = "util/version" }
panic_hook = { path = "util/panic_hook" }
io = { path = "util/io" }
keylib = { path = "key_manager" }
ctrlc = { git = "https://github.com/paritytech/rust-ctrlc.git" }
jsonrpc-core = { git = "ssh://git@base.conflux-chain.org:2222/source/jsonrpc.git", branch = "parity-1.11" }
jsonrpc-macros = { git = "ssh://git@base.conflux-chain.org:2222/source/jsonrpc.git", branch = "parity-1.11" }
jsonrpc-tcp-server = { git = "ssh://git@base.conflux-chain.org:2222/source/jsonrpc.git", branch = "parity-1.11" }
jsonrpc-http-server = { git = "ssh://git@base.conflux-chain.org:2222/source/jsonrpc.git", branch = "parity-1.11" }
parity-reactor = { path = "util/reactor" }
error-chain = { version = "0.12" }
log = "0.4"
ethereum-types = "0.4"
slab = "0.2"
cfxcore = { path = "core" }
network = { path = "network" }
db = { path = "db" }
blockgen = { path = "blockgen" }
txgen = { path = "transactiongen" }
secret-store = { path = "secret_store" }
primitives = { path = "primitives" }
log4rs = "0.8.1"
rlp = { git = "https://github.com/paritytech/parity-common" }
keccak-hash = { git = "https://github.com/paritytech/parity-common" }
rand = "0.5"
kvdb-rocksdb = "0.1.3"
client = { path = "client" }

[workspace]
exclude = [
    "util",
    "key_manager",
]

[patch.crates-io]
heapsize = { git = "https://github.com/cheme/heapsize.git", branch = "ec-macfix" }