[package]
description = "Conflux blockgen library"
homepage = "http://www.conflux-chain.io"
license = "GPL-3.0"
name = "blockgen"
version = "0.1.0"
authors = ["ming wu <ming@alt-chain.io>"]

[dependencies]
core = { path = "../core" }
ethereum-types = "0.3"
keccak-hash = { git = "https://github.com/paritytech/parity-common" }
common-types = { path = "../core/types" }
parking_lot = "0.6"
rlp = { git = "https://github.com/paritytech/parity-common" }
