[package]
description = "Conflux blockgen library"
homepage = "http://www.conflux-chain.io"
license = "GPL-3.0"
name = "blockgen"
version = "0.1.0"
authors = ["ming wu <ming@alt-chain.io>"]
edition = "2018"

[dependencies]
clap = "2"
cfxcore = { path = "../core" }
ethereum-types = "0.4"
keccak-hash = { git = "https://github.com/paritytech/parity-common" }
primitives = { path = "../primitives" }
parking_lot = "0.6"
rlp = { git = "https://github.com/paritytech/parity-common" }
rand = "0.5"
keylib = { path = "../key_manager" }
txgen = { path = "../transactiongen"}
log = "0.4"
db = { path = "../db" }
network = { path = "../network" }
kvdb-rocksdb = "0.1.3"
secret-store = { path = "../secret_store" }
toml = "0.4"
