[package]
description = "Conflux core library"
homepage = "http://www.conflux-chain.io"
license = "GPL-3.0"
name = "core"
version = "0.1.0"
authors = ["ming wu <ming@alt-chain.io>"]

[dependencies]
keccak-hash = { git = "https://github.com/paritytech/parity-common" }
ethereum-types = "0.4"
primitives = { path = "../primitives" }
ethcore-bytes = { path = "../util/bytes" }
parking_lot = "0.6"
network = { path = "../network" }
io = { path = "../util/io" }
log = "0.3"
rlp = { git = "https://github.com/paritytech/parity-common" }
lazy_static = "1.1.0"
ethkey = { path = "../ethkey" }
secret-store = { path = "../secret_store" }
rand = "0.5"
message = { path = "../message" }
error-chain = { version = "0.12", default-features = false }
slab = "0.4"
kvdb = "0.1"
db = { path = "../db" }