[package]
description = "Conflux core library"
homepage = "http://www.conflux-chain.org"
license = "GPL-3.0"
name = "core"
version = "0.1.0"
authors = ["ming wu <ming@conflux-chain.org>"]
edition = "2018"

[dependencies]
keccak-hash = { git = "https://github.com/paritytech/parity-common" }
ethereum-types = "0.4"
primitives = { path = "../primitives" }
ethcore-bytes = "0.1.1"
parking_lot = "0.6"
network = { path = "../network" }
io = { path = "../util/io" }
log = "0.3"
rlp = { git = "https://github.com/paritytech/parity-common" }
lazy_static = "1.1.0"
keylib = { path = "../key_manager" }
secret-store = { path = "../secret_store" }
rand = "0.5"
message = { path = "../message" }
error-chain = { version = "0.12", default-features = false }
slab = "0.4"
kvdb = "0.1"
db = { path = "../db" }
bit-set = "0.4"
heapsize = "0.4"
memory-cache = { path = "../util/memory_cache" }
unexpected = { path = "../util/unexpected" }
triehash-ethereum = { version = "0.2",  path = "../util/triehash-ethereum" }
elastic-array = "0.10"
byteorder = "1.0"
num = "0.2"
parity-crypto = "0.2"
bn = { git = "https://github.com/paritytech/bn", default-features = false }
lru = "0.1.11"
threadpool = "1.0"
rayon = "1.0"

[dev-dependencies]
rustc-hex = "1.0"
criterion = "0.2"
