[package]
name = "network"
version = "0.1.0"
authors = ["Dong Zhou <dong.zhou.08@gmail.com>"]

[dependencies]
mio = "0.6.8"
parking_lot = "0.6"
log = "0.3"
slab = "0.2"
ethcore-io = { path = "../util/io", features = ["mio"] }
error-chain = { version = "0.12", default-features = false }
bytes = "0.4"
