[package]
name = "network"
version = "0.1.0"
authors = ["Dong Zhou <dong.zhou.08@gmail.com>"]

[dependencies]
mio = "0.6.8"
parking_lot = "0.6"
log = "0.3"
slab = "0.2"
io = { path = "../util/io" }
error-chain = { version = "0.12", default-features = false }
bytes = "0.4"
rlp = { git = "https://github.com/paritytech/parity-common" }
ipnetwork = "0.12.6"
serde = "1.0"
serde_derive = "1.0"
ethereum-types = "0.4"
igd = "0.7"
libc = "0.2.7"
parity-path = "0.1"
ethkey = { path = "../ethkey" }
