[package]
name = "primitives"
version = "0.1.0"
authors = ["Dong Zhou <dongz@conflux-chain.org>"]

[dependencies]
ethereum-types = "0.4"
keccak-hash = { git = "https://github.com/paritytech/parity-common" }
ethkey = { path = "../ethkey" }
rlp = { git = "https://github.com/paritytech/parity-common" }
ethcore-bytes = { path = "../util/bytes" }