[package]
name = "primitives"
version = "0.1.0"
authors = ["Dong Zhou <dongz@conflux-chain.org>"]
edition = "2018"

[dependencies]
ethereum-types = "0.4"
keccak-hash = { git = "https://github.com/paritytech/parity-common" }
ethkey = { path = "../ethkey" }
rlp = { git = "https://github.com/paritytech/parity-common" }
rlp_derive = { path = "../util/rlp_derive" }
ethcore-bytes = { path = "../util/bytes" }
unexpected = { path = "../util/unexpected" }
heapsize = "0.4"
lru = "0.1"
byteorder = "1.2.7"
rand = "0.5"
siphasher = "0.3"
