[package]
name = "primitives"
version = "0.1.0"
authors = ["Dong Zhou <dongz@conflux-chain.org>"]
edition = "2018"

[dependencies]
ethereum-types = "0.4"
fixed-hash = "0.2"
keccak-hash = { git = "https://github.com/paritytech/parity-common" }
keylib = { path = "../key_manager" }
rlp = { git = "https://github.com/paritytech/parity-common" }
rlp_derive = { path = "../util/rlp_derive" }
ethcore-bytes = "0.1.1"
unexpected = { path = "../util/unexpected" }
heapsize = "0.4"
log = "0.3"
lru = "0.1"
byteorder = "1.2.7"
rand = "0.5"
siphasher = "0.3"
