[package]
description = "Conflux secret key management library"
homepage = "http://www.conflux-chain.io"
license = "GPL-3.0"
name = "secret-store"
version = "0.1.0"
authors = ["ming wu <ming@alt-chain.io>"]
edition = "2018"

[dependencies]
ethereum-types = "0.4"
keccak-hash = { git = "https://github.com/paritytech/parity-common" }
primitives = { path = "../primitives" }
parking_lot = "0.6"
rlp = { git = "https://github.com/paritytech/parity-common" }
rand = "0.5"
keylib = { path = "../key_manager" }
rustc-hex = "1.0"
