[package]
description = "Conflux transaction generator library"
homepage = "http://www.conflux-chain.io"
license = "GPL-3.0"
name = "txgen"
version = "0.1.0"
authors = ["ming wu <ming@alt-chain.io>"]

[dependencies]
core = { path = "../core" }
ethereum-types = "0.4"
keccak-hash = { git = "https://github.com/paritytech/parity-common" }
primitives = { path = "../primitives" }
parking_lot = "0.6"
rlp = { git = "https://github.com/paritytech/parity-common" }
rand = "0.5"
secret-store = { path = "../secret_store" }
network = { path = "../network" }
ethkey = { path = "../ethkey" }
