[package]
description = "Conflux transaction generator library"
homepage = "http://www.conflux-chain.io"
license = "GPL-3.0"
name = "txgen"
version = "0.1.0"
authors = ["ming wu <ming@alt-chain.io>"]
edition = "2018"

[dependencies]
clap = "2"
core = { path = "../core" }
ethereum-types = "0.4"
keccak-hash = { git = "https://github.com/paritytech/parity-common" }
primitives = { path = "../primitives" }
parking_lot = "0.6"
rlp = { git = "https://github.com/paritytech/parity-common" }
rand = "0.5"
secret-store = { path = "../secret_store" }
network = { path = "../network" }
ethkey = { path = "../ethkey" }
log = "0.4"
ethcore-bytes = "0.1.1"
db = { path = "../db" }
kvdb-rocksdb = "0.1.3"
toml = "0.4"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "benchmark"
harness = false
