[package]
name = "rlp_derive"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]
edition = "2018"

[lib]
name = "rlp_derive"
proc-macro = true

[dependencies]
syn = "0.15"
quote = "0.6"
proc-macro2 = "0.4"

[dev-dependencies]
rlp = { git = "https://github.com/paritytech/parity-common" }
